# informatiCup2024

./: .gitignore  Main.ipynb  README.md  project-description.md  pyproject.toml
documentation/: Overview ImplementationPaper.drawio  README.md
example/: main.py
pipeline_folder/: augmented_text.txt
pipeline_results/: dalle-30.csv  falcon.csv  gpt2.csv  pipelines.txt  stable.csv  stable_diff-30.csv
src/: README.md  main.py
src/fool_ai_detector/model/: evaluator.py  generator.py
src/fool_ai_detector/service/: CSVWriter.py  csv_writer.py  dalle_image_generator.py  double_whitespace_processor_text.py  fake_generator_image.py  fake_generator_picture.py  fake_generator_text.py  falcon_text_generator.py  final_image_processor.py  final_text_processor.py  gaussian_processor.py  gpt2_text_generator.py  nahrawy_image_evaluator.py  naive_baseline_processor_image.py  naive_baseline_processor_picture.py  naive_baseline_processor_text.py  plotter.py  poisson_processor.py  radar_text_evaluator.py  resnet18_evaluator.py  roberta_base_openai_detector.py  roberta_base_openai_evaluator.py  s_and_p_processor.py  sandp_processor.py  speckle_processor.py  stable_diffusion_image_generator.py  translator_processor.py  typo_text_processor.py  umm_maybe_ai_image_evaluator.py
src/model/: generator.py
src/service/: fake_generator_picture.py  fake_generator_text.py  roberta_base_openai_detector.py
test/: README.md
test/fool_ai_detector/service/: test_dalle_image_generator.py  test_fake_generator_image.py  (+23 more)
test/service/: fake_generator_picture_test.py  fake_generator_text_test.py
